[gd_scene load_steps=8 format=2]

[ext_resource path="res://LizardGame/UI/BonusScreen/BonusScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://LizardGame/Sprites/UI/HeartIcon.png" type="Texture" id=3]
[ext_resource path="res://LizardGame/Sprites/UI/DashIcon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="BonusScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MenuContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 628.0
margin_bottom = 348.0
custom_constants/separation = 40

[node name="Separator" type="Control" parent="MenuContainer/MarginContainer/VBoxContainer"]
margin_right = 616.0

[node name="Title" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 616.0
margin_bottom = 73.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 4 )
text = "CHOOSE A BONUS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 616.0
margin_bottom = 158.0
alignment = 1

[node name="ChoiceList" type="VBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 278.0
margin_right = 338.0
margin_bottom = 45.0
custom_constants/separation = 10

[node name="Choice1" type="Button" parent="MenuContainer/MarginContainer/VBoxContainer/HBoxContainer/ChoiceList"]
margin_right = 60.0
margin_bottom = 17.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.682353, 0.466667, 0.866667, 1 )
custom_colors/font_color = Color( 0.490196, 0.0588235, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.827451, 0.533333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "but1"
icon = ExtResource( 4 )
align = 2

[node name="Choice2" type="Button" parent="MenuContainer/MarginContainer/VBoxContainer/HBoxContainer/ChoiceList"]
margin_top = 27.0
margin_right = 60.0
margin_bottom = 45.0
mouse_filter = 2
custom_colors/font_color_focus = Color( 0.682353, 0.466667, 0.866667, 1 )
custom_colors/font_color = Color( 0.490196, 0.0588235, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.811765, 0.827451, 0.533333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "but2"
icon = ExtResource( 3 )
align = 2

[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/HBoxContainer/ChoiceList/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/HBoxContainer/ChoiceList/Choice2" to="." method="_on_Choice2_pressed"]
